networking/network-policies/allow-backend-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-db
  namespace: default
  labels:
    app.kubernetes.io/name: network-policy
    app.kubernetes.io/component: security
    app.kubernetes.io/part-of: craftique
    app.kubernetes.io/managed-by: argocd
    environment: production
    owner: secdevops-team
    project: phd-craftique
    cost-center: education
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: craftique-backend
      ports:
        - protocol: TCP
          port: 5432
