networking/network-policies/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
  labels:
    app.kubernetes.io/name: network-policy
    app.kubernetes.io/component: security
    app.kubernetes.io/part-of: craftique
    app.kubernetes.io/managed-by: argocd
    environment: production
    owner: secdevops-team
    project: phd-craftique
    cost-center: education
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
